--- a/TimeNetExperimentGenerator/nbproject/project.properties
+++ b/TimeNetExperimentGenerator/nbproject/project.properties
@@ -28,12 +28,16 @@ dist.jar=${dist.dir}/TimeNetExperimentGenerator.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.REngine.jar=lib/REngine.jar
+file.reference.RserveEngine.jar=lib\\RserveEngine.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.swing-layout.classpath}
+    ${libs.swing-layout.classpath}:\
+    ${file.reference.REngine.jar}:\
+    ${file.reference.RserveEngine.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
