added ImagePanel class

--- a/TimeNetExperimentGenerator/nbproject/project.properties
+++ b/TimeNetExperimentGenerator/nbproject/project.properties
@@ -28,12 +28,15 @@ dist.jar=${dist.dir}/TimeNetExperimentGenerator.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.batik-swing.jar=C:\\Users\\Simon\\Downloads\\batik-1.7\\batik-1.7\\lib\\batik-swing.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.swing-layout.classpath}
+    ${libs.swing-layout.classpath}:\
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.batik-swing.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
