--- a/TimeNetExperimentGenerator/nbproject/project.properties
+++ b/TimeNetExperimentGenerator/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.jar=${dist.dir}/TimeNetExperimentGenerator.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.batik-swing.jar=C:\\Users\\Simon\\Downloads\\batik-1.7\\batik-1.7\\lib\\batik-swing.jar
+file.reference.batik-swing.jar=lib\\batik-swing.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
