--- a/TimeNetExperimentGenerator/nbproject/project.properties
+++ b/TimeNetExperimentGenerator/nbproject/project.properties
@@ -28,13 +28,27 @@ dist.jar=${dist.dir}/TimeNetExperimentGenerator.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.9.jar=lib/commons-codec-1.9.jar
+file.reference.commons-logging-1.1.2.jar=lib/commons-logging-1.1.2.jar
+file.reference.fluent-hc-4.2.5.jar=lib/fluent-hc-4.2.5.jar
+file.reference.httpclient-4.2.5.jar=lib/httpclient-4.2.5.jar
+file.reference.httpclient-cache-4.2.5.jar=lib/httpclient-cache-4.2.5.jar
+file.reference.httpcore-4.2.4.jar=lib/httpcore-4.2.4.jar
+file.reference.httpmime-4.2.5.jar=lib/httpmime-4.2.5.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.swing-layout.classpath}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.commons-codec-1.9.jar}:\
+    ${file.reference.commons-logging-1.1.2.jar}:\
+    ${file.reference.fluent-hc-4.2.5.jar}:\
+    ${file.reference.httpclient-4.2.5.jar}:\
+    ${file.reference.httpclient-cache-4.2.5.jar}:\
+    ${file.reference.httpcore-4.2.4.jar}:\
+    ${file.reference.httpmime-4.2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
