logging of memory usage. started with 5120Mb heap

--- a/TimeNetExperimentGenerator/nbproject/project.properties
+++ b/TimeNetExperimentGenerator/nbproject/project.properties
@@ -95,6 +95,7 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+run.jvmargs=-Xms512M -Xmx512M
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
