--- a/timenetws-server/WebContent/WEB-INF/classes/log4j.properties
+++ b/timenetws-server/WebContent/WEB-INF/classes/log4j.properties
@@ -1,13 +1,13 @@
-log4j.rootLogger = DEBUG, Console
+log4j.rootLogger = ERROR, Console
 
 log4j.appender.Console = org.apache.log4j.ConsoleAppender
 log4j.appender.Console.layout = org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern = %r [%t] %-5p %c %x - %m%n
 
-#log4j.logger.com.genuitec.eclipse.sqlexplorer = Debug
-#log4j.logger.org.apache = WARN
-#log4j.logger.org.hibernate = WARN 
+log4j.logger.com.genuitec.eclipse.sqlexplorer = Debug
+log4j.logger.org.apache = WARN
+log4j.logger.org.hibernate = WARN 
 log4j.logger.org.jboss.resteasy.plugins.server.servlet.ConfigurationBootstrap = WARN
 log4j.org.jboss.resteasy.plugins.server.servlet.ConfigurationBootstrap = WARN
-# log4j.com.mchange.v2 = WARN
-# log4j.com.mchange.v2.c3p0.impl = WARN
+log4j.com.mchange.v2 = WARN
+log4j.com.mchange.v2.c3p0.impl = WARN
