--- a/timenetws-server/src/node/tns/package.json
+++ b/timenetws-server/src/node/tns/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.6.0",
     "mongodb": "*",
     "mongoskin": "*",
-    "formidable": "*"
+    "formidable": "*",
+	"mkdirp": "*"
   }
 }
