--- a/timenetws-server/src/node/tns/package.json
+++ b/timenetws-server/src/node/tns/package.json
@@ -16,6 +16,7 @@
     "mongodb": "*",
     "mongoskin": "*",
     "formidable": "*",
-	"mkdirp": "*"
+	"mkdirp": "*",
+    "graceful-fs": "*"
   }
 }
