--- a/TimeNetExperimentGenerator/nbproject/project.properties
+++ b/TimeNetExperimentGenerator/nbproject/project.properties
@@ -91,7 +91,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 native.bundling.enabled=true
-platform.active=default_platform
+platform.active=JDK_1.7
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
