changing the simultiondeletionhandling

--- a/timenetws-server/src/node/tns/package.json
+++ b/timenetws-server/src/node/tns/package.json
@@ -17,6 +17,7 @@
     "mongoskin": "*",
     "formidable": "*",
 	"mkdirp": "*",
-    "graceful-fs": "*"
+    "graceful-fs": "*",
+	"rimraf": "*"
   }
 }
