finally(?) proper thread handling

--- a/TimeNETOptimizationEnvironment/nbproject/project.properties
+++ b/TimeNETOptimizationEnvironment/nbproject/project.properties
@@ -42,7 +42,7 @@ platform.active=JDK_1.7
 file.reference.httpcore-4.2.4.jar=lib/httpcore-4.2.4.jar
 annotation.processing.enabled=true
 file.reference.httpclient-cache-4.2.5.jar=lib/httpclient-cache-4.2.5.jar
-main.class=toe.TimeNetController
+main.class=toe.TOE
 dist.javadoc.dir=${dist.dir}/javadoc
 javadoc.additionalparam=
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
