log to dev/null

--- a/TOEDistributionServer/src/node/tns/mongoconfig.conf
+++ b/TOEDistributionServer/src/node/tns/mongoconfig.conf
@@ -3,5 +3,6 @@ port = 27017
 quiet = true
 dbpath = data
 #logappend = true
-logpath = ./mongod.log
+#logpath = ./mongod.log
+logpath = /dev/null
 nojournal = true
