fixed and unified distance-calculation

--- a/TimeNETOptimizationEnvironment/nbproject/project.properties
+++ b/TimeNETOptimizationEnvironment/nbproject/project.properties
@@ -7,7 +7,9 @@ javadoc.author=false
 build.sysclasspath=ignore
 javac.target=1.7
 build.generated.dir=${build.dir}/generated
-run.classpath=${javac.classpath}\:${build.classes.dir}
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 native.bundling.enabled=true
 debug.test.classpath=${run.test.classpath}
 jnlp.descriptor=application
@@ -30,9 +32,11 @@ build.classes.dir=${build.dir}/classes
 dist.dir=dist
 manifest.file=manifest.mf
 javac.source=1.7
-run.jvmargs=-Xms1048M -Xmx1048M
+run.jvmargs=-Xms3060M -Xmx3060M
 manifest.custom.permissions=
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 build.generated.sources.dir=${build.dir}/generated-sources
 jnlp.signing=
 javadoc.notree=false
@@ -46,7 +50,16 @@ main.class=toe.TOE
 dist.javadoc.dir=${dist.dir}/javadoc
 javadoc.additionalparam=
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
-javac.classpath=${libs.swing-layout.classpath}\:${libs.beans-binding.classpath}\:${file.reference.commons-codec-1.9.jar}\:${file.reference.commons-logging-1.1.2.jar}\:${file.reference.fluent-hc-4.2.5.jar}\:${file.reference.httpclient-4.2.5.jar}\:${file.reference.httpclient-cache-4.2.5.jar}\:${file.reference.httpcore-4.2.4.jar}\:${file.reference.httpmime-4.2.5.jar}
+javac.classpath=\
+    ${libs.swing-layout.classpath}:\
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.commons-codec-1.9.jar}:\
+    ${file.reference.commons-logging-1.1.2.jar}:\
+    ${file.reference.fluent-hc-4.2.5.jar}:\
+    ${file.reference.httpclient-4.2.5.jar}:\
+    ${file.reference.httpclient-cache-4.2.5.jar}:\
+    ${file.reference.httpcore-4.2.4.jar}:\
+    ${file.reference.httpmime-4.2.5.jar}
 javadoc.noindex=false
 manifest.custom.codebase=
 annotation.processing.enabled.in.editor=false
@@ -63,17 +76,22 @@ annotation.processing.run.all.processors=true
 excludes=
 application.title=TimeNETOptimizationEnvironment
 file.reference.httpmime-4.2.5.jar=lib/httpmime-4.2.5.jar
-annotation.processing.processor.options=-ADapple.laf.useScreenMenuBar\=true
+annotation.processing.processor.options=-ADapple.laf.useScreenMenuBar=true
 jnlp.codebase.type=no.codebase
 file.reference.fluent-hc-4.2.5.jar=lib/fluent-hc-4.2.5.jar
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 build.test.results.dir=${build.dir}/test/results
 endorsed.classpath=
 javadoc.use=true
 javadoc.nonavbar=false
 jnlp.signing.alias=
 javadoc.windowtitle=
-javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
+javac.test.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 src.dir=src
 debug.classpath=${run.classpath}
 jnlp.enabled=false
