unkown version number

--- a/TimeNETOptimizationEnvironment/src/toe/Version.properties
+++ b/TimeNETOptimizationEnvironment/src/toe/Version.properties
@@ -1,6 +1,8 @@
-#Mon, 22 Aug 2016 21:56:57 +0200
+#Thu, 22 Jun 2017 08:18:18 +0200
 
 
-version=2016.06.18-23-ga299409
-timestamp=2016-08-22T21\:56Z
-build.date=2016-08-22
+version=unknown
+timestamp=2017-06-22T08\:18Z
+build.date=2017-06-22
+
+shorthash=unknown
